# png_pong

./: .gitignore  .travis.yml  CHANGELOG.md  CODEOFCONDUCT.md  Cargo.toml  LICENSE-ZLIB  LICENSE_BSL.txt  LICENSE_MIT.txt  LICENSE_ZLIB.txt  README.md  list.rs
.github/workflows/: ci.yml
benches/: bench.rs  decode.rs  encode.rs
comparison/: Cargo.toml
comparison/benches/: aci_png.rs  decode.rs  decode_aci.rs  decode_imagefmt.rs  decode_imagine.rs  decode_libpng.rs  decode_lodepng.rs  decode_png.rs  decode_png_pong.rs  encode.rs  encode_aci.rs  encode_imagefmt.rs  encode_libpng.rs  encode_lodepng.rs  encode_png.rs  encode_png_pong.rs  imagefmt.rs  imagine.rs  libpng.rs  lodepng.rs  png.rs
comparison/src/: lib.rs
examples/: chunks.rs  decode_raster.rs  encode_raster.rs  passthrough.rs  read.rs  read_advanced.rs  write.rs
src/: adam7.rs  bitstream.rs  checksum.rs  chunk.rs  chunk_decoder.rs  chunk_encoder.rs  consts.rs  decode.rs  decoder.rs  encode.rs  encoder.rs  error.rs  format.rs  frame.rs  frame_decoder.rs  frame_encoder.rs  lib.rs  prelude.rs  raster.rs  step.rs  zlib.rs
src/chunk/: bkgd.rs  idat.rs  iend.rs  ihdr.rs  itxt.rs  phys.rs  plte.rs  text.rs  time.rs  trns.rs  unknown.rs  ztxt.rs
src/decode/: chunk_decoder.rs  chunks.rs  error.rs  step_decoder.rs  steps.rs
src/decode/step_decoder/: unfilter.rs
src/decode/steps/: unfilter.rs
src/encode/: chunk_enc.rs  chunk_encoder.rs  error.rs  filter.rs  step_enc.rs  step_encoder.rs
src/lodepng/: error.rs  ffi.rs  iter.rs  mod.rs
src/lodepng/rustimpl/: adler32.rs  bitmath.rs  chunks.rs  colors.rs  crc32.rs  decompressor.rs  deflate.rs  huffman.rs  mod.rs  png_decoder.rs  zlib.rs
tests/: roundtrip.rs  tests.rs
tests/png/bad/: README.md
