[package]
name = "png_pong"
version = "0.9.1"
license = "Apache-2.0 OR Zlib"
description = "A pure Rust PNG/APNG encoder & decoder"
repository = "https://github.com/AldaronLau/png_pong"
documentation = "https://docs.rs/png_pong"
homepage = "https://github.com/AldaronLau/png_pong/blob/master/CHANGELOG.md"
include = [
  "Cargo.toml",
  "README.md",
  "LICENSE-ZLIB",
  "LICENSE-APACHE",
  "src/*",
  "benches/*",
]
categories = ["multimedia::encoding", "multimedia::images"]
keywords = ["png", "encoder", "decoder", "apng", "image"]
readme = "README.md"
edition = "2021"
rust-version = "1.65"

[dependencies.pix]
version = "0.13"

[dependencies.simd-adler32]
version = "0.3"

[dependencies.miniz_oxide]
version = "0.7"
features = ["simd"]

[dev-dependencies.criterion]
version = "0.5"

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"

[[bench]]
name = "encode"
harness = false

[[bench]]
name = "decode"
harness = false

[profile.test]
opt-level = 2

[profile.dev]
opt-level = 2

[features]
default = []
