[package]
name = "comparison"
version = "0.1.0"
authors = ["Jeron Aldaron Lau <jeronlau@plopgrizzly.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png_pong = { path = "../" }
png = "=0.16.8"
imagine = "=0.0.5"
lodepng = "=3.4.5"
imagefmt = "=4.0.0"
aci_png = "=0.8.0-pre0"
libpng-sys = "=1.1.8"
pix = "=0.13.1"
afi = "=0.8.0-pre0"

[dev-dependencies.criterion]
version = "0.3"

[[bench]]
name = "png"
harness = false

[[bench]]
name = "lodepng"
harness = false

[[bench]]
name = "imagefmt"
harness = false

[[bench]]
name = "imagine"
harness = false

[[bench]]
name = "aci_png"
harness = false

[[bench]]
name = "libpng"
harness = false
